--- a/app/src/main/assets/clue.html
+++ b/app/src/main/assets/clue.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Staatliches" rel="stylesheet">
 </head>
 
 <body onload="init()">
